[java 9] Passing VM options via -J, making custom jlink wrapper obsolete